exports[`basic functionality > autorun 1`] = `
Bundle size stats saved to e2e-tests/artifacts/basic/out/bundle-size-stats.json
Bundle size report saved to e2e-tests/artifacts/basic/out/bundle-size-report.txt

HTML files:
- index.html: 107KB / 23KB

JS files:
- app-[hash].js: 235KB / 77KB
- framework-[hash].js: 26KB / 9KB
- commons-[hash].js: 17KB / 6KB
- component---src-page-templates-post-list-post-list-tsx-[hash].js: 16KB / 5KB
- webpack-runtime-[hash].js: 14KB / 4KB
- chunk-[hash].js (x2): 14KB / 9KB

Group: 322KB / 110KB

JSON files:
- page-data.json: 77KB / 24KB
- page-data/page-data.json: 29KB / 13KB
- 2737273111.json: 6KB / 2KB
- 3481615850.json: 0KB / 0KB

Group: 112KB / 39KB

TOTAL: 541KB / 172KB

`;

exports[`basic functionality > autorun 2`] = `
HTML files:
- index.html: 107KB / 23KB

JS files:
- app-[hash].js: 235KB / 77KB
- framework-[hash].js: 26KB / 9KB
- commons-[hash].js: 17KB / 6KB
- component---src-page-templates-post-list-post-list-tsx-[hash].js: 16KB / 5KB
- webpack-runtime-[hash].js: 14KB / 4KB
- chunk-[hash].js (x2): 14KB / 9KB

Group: 322KB / 110KB

JSON files:
- page-data.json: 77KB / 24KB
- page-data/page-data.json: 29KB / 13KB
- 2737273111.json: 6KB / 2KB
- 3481615850.json: 0KB / 0KB

Group: 112KB / 39KB

TOTAL: 541KB / 172KB

`;

exports[`basic functionality > print 1`] = `
Bundle size report saved to e2e-tests/artifacts/basic/out/bundle-size-report.txt

HTML files:
- index.html: 107KB / 23KB

JS files:
- app-[hash].js: 235KB / 77KB
- framework-[hash].js: 26KB / 9KB
- commons-[hash].js: 17KB / 6KB
- component---src-page-templates-post-list-post-list-tsx-[hash].js: 16KB / 5KB
- webpack-runtime-[hash].js: 14KB / 4KB
- chunk-[hash].js (x2): 14KB / 9KB

Group: 322KB / 110KB

JSON files:
- page-data.json: 77KB / 24KB
- page-data/page-data.json: 29KB / 13KB
- 2737273111.json: 6KB / 2KB
- 3481615850.json: 0KB / 0KB

Group: 112KB / 39KB

TOTAL: 541KB / 172KB

`;

exports[`basic functionality > print 2`] = `
HTML files:
- index.html: 107KB / 23KB

JS files:
- app-[hash].js: 235KB / 77KB
- framework-[hash].js: 26KB / 9KB
- commons-[hash].js: 17KB / 6KB
- component---src-page-templates-post-list-post-list-tsx-[hash].js: 16KB / 5KB
- webpack-runtime-[hash].js: 14KB / 4KB
- chunk-[hash].js (x2): 14KB / 9KB

Group: 322KB / 110KB

JSON files:
- page-data.json: 77KB / 24KB
- page-data/page-data.json: 29KB / 13KB
- 2737273111.json: 6KB / 2KB
- 3481615850.json: 0KB / 0KB

Group: 112KB / 39KB

TOTAL: 541KB / 172KB

`;
